@@ -258,6 +258,7 @@ static int add_stream(h2_stream *stream, void *ctx)
     flowOut = nghttp2_session_get_stream_remote_window_size(x->s->ngh2, stream->id);
     bbout(x->bb, "%s\n    \"%d\": {\n", (x->idx? "," : ""), stream->id);
     bbout(x->bb, "    \"state\": \"%s\",\n", h2_stream_state_str(stream));
+    bbout(x->bb, "    \"created\": %f,\n", ((double)stream->created)/APR_USEC_PER_SEC);
     bbout(x->bb, "    \"flowIn\": %d,\n", flowIn);
     bbout(x->bb, "    \"flowOut\": %d,\n", flowOut);
     bbout(x->bb, "    \"dataIn\": %"APR_UINT64_T_FMT",\n", stream->in_data_octets);  
@@ -363,6 +364,7 @@ static apr_status_t h2_status_stream_filter(h2_stream *stream)
                    apr_itoa(stream->pool, connFlowOut));
      
     bbout(bb, "{\n");
+    bbout(bb, "  \"version\": \"draft-01\",\n");
     add_settings(bb, s, 0);
     add_peer_settings(bb, s, 0);
     bbout(bb, "  \"connFlowIn\": %d,\n", connFlowIn);
